fix height for dates to show on mobile

--- a/src/CSS/createEvents.css
+++ b/src/CSS/createEvents.css
@@ -190,6 +190,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 /* A few custom styles for date inputs */
 input[type="date"] {
+  min-height: 2.5rem;
   border-radius: 0px;
   appearance: none;
   -webkit-appearance: none;
@@ -235,7 +236,7 @@ input[type="time"] {
   -webkit-appearance: none;
   position: relative;
   visibility: visible !important;
-
+  min-height: 2.5rem;
   width: 95%;
   padding: 0px;
   padding-left: 4px;
